@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)collect.c	2.52 (gritter) 3/4/06";
+static char sccsid[] = "@(#)collect.c	2.53 (gritter) 6/16/07";
 #endif
 #endif /* not lint */
 
@@ -132,7 +132,7 @@ insertcommand(FILE *fp, char *cmd)
 endpipe:
 	safe_signal(SIGPIPE, SIG_IGN);
 	Pclose(obuf);
-	safe_signal(SIGPIPE, SIG_DFL);
+	safe_signal(SIGPIPE, dflpipe);
 }
 
 /*
@@ -211,7 +211,7 @@ endpipe:
 	if (obuf != stdout) {
 		safe_signal(SIGPIPE, SIG_IGN);
 		Pclose(obuf);
-		safe_signal(SIGPIPE, SIG_DFL);
+		safe_signal(SIGPIPE, dflpipe);
 	}
 	if (lbuf)
 		free(lbuf);
